--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.20.2
+  pin_code_fields: ^8.0.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  lottie: ^2.7.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,19 +65,35 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/animations/quiz.json
+    - assets/animations/email.json
+    - assets/animations/maintenance.json
     - assets/icons/notification.png
     - assets/icons/quiz.png
     - assets/icons/event.png
     - assets/icons/aktivitas.png
     - assets/icons/jejak.png
     - assets/icons/avatar.png
+    - assets/icons/home.png
+    - assets/icons/gallery.png
+    - assets/icons/map.png
+    - assets/icons/profile.png
+    - assets/icons/scan.png
     - assets/img/background.png
     - assets/img/informasi1.jpg
     - assets/img/informasi2.png
     - assets/img/quiz_ilustrasi.png
+    - assets/img/notifications_ilustrasi.png
     - assets/img/event1.jpg
     - assets/img/event2.jpg
     - assets/img/event3.jpg
+    - assets/img/splash1.png
+    - assets/img/splash2.png
+    - assets/img/mapp.jpg
+    - assets/images/
+    - assets/images/poci_tahu_aci.jpg
+    - assets/images/gribigian.jpg
+    - assets/images/sidomukti.jpg
 
   fonts:
     - family: Poppins
